[package]
name = "rbdown"
version = "0.1.0"
edition = "2021"


[dependencies]
clap = { version = "4.1.8" ,features = ["cargo"]} 
log = "0.4.17"
env_logger = "0.10.0"
serde_json = "1.0.93"
reqwest = { version = "0.11.14" ,features = ["json","blocking","cookies"]}  
tokio = {version = "1" , features = ["full"]}
qrcode = "0.12.0"
url = "2.3.1"
cookie_store = "0.19.0"
reqwest_cookie_store="0.5.0"
anyhow = "1.0.70"
serde = "1.0.158"
